--- a/site/japanese.css
+++ b/site/japanese.css
@@ -3,16 +3,77 @@
 * {
   box-sizing: border-box;
   font-size: 14px;
-}
-h1 {
-  text-align: center;
-  font-size: 175%;
-  top-margin: 15px;
+  margin: 0;
 }
 
-section {
+body {
+  background-color: #ffb7c5
+}
+
+header {
+  background-color: #ffb7e9;
+  width: 100%;
+  height: 50px;
+}
+
+#nav-bar {
+width: 50%;
+float: right;
+margin-top: 20px;
+}
+
+nav > ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  list-style-type: none;
+}
+.nav-link:link, .nav-link:visited {
+  text-decoration: none;
+  color: black;
+  display: block;
+  text-align: center;
+}
+.nav-link:hover, .nav-link:active {
+  font-weight: bold;
+}
+
+h1 {
+  font-size: 200%;
+  float: left;
+  margin-top: 10px;
+  margin-left: 30px;
+}
+
+#blossom-image {
+  background-image: url("cherry-blossom-v2.jfif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 300px;
+}
+
+.text {
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+h2 {
+  text-align: center;
+  padding: 10px;
+  margin: 10px;
+}
+
+p {
+  text-align: justify;
+  padding: 10px;
+  margin: 10px;
+}
+
+.link-tiles {
   border: 1px solid black;
-  background-color: pink;
+  background-color: #b7c5ff;
   width: 90%;
   height: 200px;
   margin-right: auto;
@@ -21,42 +82,32 @@ section {
   margin-top: 20px;
   font-family: Helvetica;
   padding: 10px;
-  position: relative;
 }
 
 h3 {
-	border: 1px solid black;
-	margin: 0;
-	padding: 10px;
 	text-align: center;
-	width: 30%;
-	font-size: 125%;
-	position: absolute;
-	top: -1px;
-	right: -1px;
+	font-size: 180%;
+  padding: 20px;
 }
 
-h2 {
-	position: absolute;
-	top: 50px;
-  right: 100px;
-  font-size: 200%;
+h4 {
+  text-align: center;
+  font-size: 150%;
+  padding: 20px;
 }
 
-#title-kanji {
-	background-color: yellow;
-}
-
-#title-hiragana {
-	background-color: green;
-}
-
-#title-katakana {
-	background-color: blue;
+footer {
+  background-color: #ffb7e9;
+  width: 100%;
+  height: 50px;
+  position: absolute;
+  bottom: 0;
 }
 
 .row {
-  width: 100%;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
