update to use bootstrap

--- a/site/japanese.css
+++ b/site/japanese.css
@@ -1,13 +1,8 @@
-/*****Base Styles******/
-
-* {
-  box-sizing: border-box;
-  font-size: 14px;
-  margin: 0;
-}
-
 body {
   background-color: #ffb7c5
+  font-size: 16px;
+  color: #FFF;
+  font-family: 'monospace', sans-serif;
 }
 
 header {
@@ -16,33 +11,26 @@ header {
   height: 50px;
 }
 
-#nav-bar {
-width: 50%;
-float: right;
-margin-top: 20px;
-}
-
-nav > ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  list-style-type: none;
-}
-.nav-link:link, .nav-link:visited {
-  text-decoration: none;
-  color: black;
-  display: block;
-  text-align: center;
-}
-.nav-link:hover, .nav-link:active {
+.navbar-brand h1 {
+  color: #9966ff;
+  font-size: 1.5em;
+  text-transform: uppercase;
   font-weight: bold;
+  text-shadow: 1px 1px 1px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-h1 {
-  font-size: 200%;
-  float: left;
-  margin-top: 10px;
-  margin-left: 30px;
+.navbar-brand a:hover {
+  text-decoration: none;
+}
+
+#main-navbar {
+
+}
+
+#nav-list {
+  
 }
 
 #blossom-image {
@@ -53,20 +41,24 @@ h1 {
   height: 300px;
 }
 
-.text {
-  width: 75%;
-  margin-left: auto;
-  margin-right: auto;
+#main-content {
+  background-color: #ffb7c5;
+}
+
+#about-site {
+  color: black;
+}
+
+#about-japanese {
+  color: black;
 }
 
 h2 {
-  text-align: center;
   padding: 10px;
   margin: 10px;
 }
 
 p {
-  text-align: justify;
   padding: 10px;
   margin: 10px;
 }
@@ -75,7 +67,6 @@ p {
   border: 1px solid black;
   background-color: #b7c5ff;
   width: 90%;
-  height: 200px;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 20px;
@@ -85,8 +76,8 @@ p {
 }
 
 h3 {
-	text-align: center;
-	font-size: 180%;
+  text-align: center;
+  font-size: 180%;
   padding: 20px;
 }
 
@@ -94,146 +85,4 @@ h4 {
   text-align: center;
   font-size: 150%;
   padding: 20px;
-}
-
-footer {
-  background-color: #ffb7e9;
-  width: 100%;
-  height: 50px;
-  position: absolute;
-  bottom: 0;
-}
-
-.row {
-  width: 75%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-
-/*******  Desktop **********/
-@media (min-width: 992px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-    float: left;
-  }
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
-  }
-  .col-lg-4 {
-    width: 33.33%;
-  }
-  .col-lg-5 {
-    width: 41.66%;
-  }
-  .col-lg-6 {
-    width: 50%;
-  }
-  .col-lg-7 {
-    width: 58.33%;
-  }
-  .col-lg-8 {
-    width: 66.66%;
-  }
-  .col-lg-9 {
-    width: 74.99%;
-  }
-  .col-lg-10 {
-    width: 83.33%;
-  }
-  .col-lg-11 {
-    width: 91.66%;
-  }
-  .col-lg-12 {
-    width: 100%;
-  }
-}
-/******* Tablet **********/
-@media (min-width: 768px) and (max-width:991px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-    float: left;
-  }
-  .col-md-1 {
-    width: 8.33%;
-  }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-md-3 {
-    width: 25%;
-  }
-  .col-md-4 {
-    width: 33.33%;
-  }
-  .col-md-5 {
-    width: 41.66%;
-  }
-  .col-md-6 {
-    width: 50%;
-  }
-  .col-md-7 {
-    width: 58.33%;
-  }
-  .col-md-8 {
-    width: 66.66%;
-  }
-  .col-md-9 {
-    width: 74.99%;
-  }
-  .col-md-10 {
-    width: 83.33%;
-  }
-  .col-md-11 {
-    width: 91.66%;
-  }
-  .col-md-12 {
-    width: 100%;
-  }
-}
-/******* Mobile **********/
-@media (max-width: 767px) {
-  .col-s-1, .col-s-2, .col-s-3, .col-s-4, .col-s-5, .col-s-6, .col-s-7, .col-s-8, .col-s-9, .col-s-10, .col-s-11, .col-s-12 {
-    float: left;
-  }
-  .col-s-1 {
-    width: 8.33%;
-  }
-  .col-s-2 {
-    width: 16.66%;
-  }
-  .col-s-3 {
-    width: 25%;
-  }
-  .col-s-4 {
-    width: 33.33%;
-  }
-  .col-s-5 {
-    width: 41.66%;
-  }
-  .col-s-6 {
-    width: 50%;
-  }
-  .col-s-7 {
-    width: 58.33%;
-  }
-  .col-s-8 {
-    width: 66.66%;
-  }
-  .col-s-9 {
-    width: 74.99%;
-  }
-  .col-s-10 {
-    width: 83.33%;
-  }
-  .col-s-11 {
-    width: 91.66%;
-  }
-  .col-s-12 {
-    width: 100%;
-  }
 }
